--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minor-main",
+  "name": "astro-cloudflare",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.2",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/cloudflare": "^11.0.4",
+    "astro": "^4.15.2",
     "typescript": "^5.5.4"
   }
 }
